--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ bcrypt==4.2.0
 cachetools==5.4.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
+chromadb
 click==8.1.7
 cryptography==43.0.0
 dataclasses-json==0.6.7
