--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ bcrypt==4.2.0
 cachetools==5.4.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
+chroma-hnswlib==0.7.5
 chromadb==0.5.4
 click==8.1.7
 cryptography==43.0.0
@@ -57,5 +58,5 @@ tqdm==4.65.0
 urllib3==2.1.0
 uvicorn==0.23.2
 watchdog==3.0.0
-whitenoise
+whitenoise==6.7.0
 logging
