--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-altair==5.3.0
+aiohttp==3.9.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.4.0
 asgiref==3.8.1
 attrs==23.2.0
 bcrypt==4.2.0
-cachetools==5.4.0
 certifi==2024.7.4
+cffi==1.17.0
 charset-normalizer==3.3.2
 chroma-hnswlib==0.7.5
 chromadb==0.5.4
@@ -12,9 +15,18 @@ cryptography==43.0.0
 dataclasses-json==0.6.7
 Deprecated==1.2.14
 Django==5.1
+django-storages==1.14.4
+dnspython==2.6.1
 email_validator==2.2.0
+fastapi==0.111.1
+fastapi-cli==0.0.4
+filelock==3.15.4
 firebase-admin==6.5.0
-Flask==3.0.3
+flatbuffers==24.3.25
+fsspec==2024.6.1
+gitdb==4.0.11
+GitPython==3.1.43
+google-ai-generativelanguage==0.6.6
 google-api-core==2.19.1
 google-api-python-client==2.138.0
 google-auth==2.32.0
@@ -22,41 +34,109 @@ google-auth-httplib2==0.2.0
 google-cloud-core==2.4.1
 google-cloud-firestore==2.17.2
 google-cloud-storage==2.18.2
+google-crc32c==1.5.0
+google-generativeai==0.7.2
 google-resumable-media==2.7.2
 googleapis-common-protos==1.63.2
 grpcio==1.65.1
 grpcio-status==1.62.2
-gunicorn==23.0.0
+gTTS==2.5.2
+h11==0.14.0
+httpcore==1.0.5
+httplib2==0.22.0
+httptools==0.6.1
 httpx==0.27.0
-huggingface-hub==0.24.2
+humanfriendly==10.0
 idna==3.7
+importlib_metadata==8.0.0
+importlib_resources==6.4.0
+itsdangerous==2.2.0
 Jinja2==3.1.4
+jmespath==1.0.1
+jsonpatch==1.33
+jsonpointer==3.0.0
 jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
 langchain==0.2.10
 langchain-community==0.2.9
 langchain-core==0.2.24
 langchain-google-genai==1.0.8
 langchain-openai==0.1.17
+langchain-text-splitters==0.2.2
+langchainhub==0.1.20
 langsmith==0.1.93
-MarkupSafe==2.1.5
+marshmallow==3.21.3
+mmh3==4.1.0
+monotonic==1.6
+msgpack==1.0.8
+multidict==6.0.5
+mypy-extensions==1.0.0
 numpy==1.26.4
+oauthlib==3.2.2
+onnxruntime==1.18.1
 openai==1.36.1
+opentelemetry-api==1.26.0
+opentelemetry-exporter-otlp-proto-common==1.26.0
+opentelemetry-exporter-otlp-proto-grpc==1.26.0
+opentelemetry-instrumentation==0.47b0
+opentelemetry-instrumentation-asgi==0.47b0
+opentelemetry-instrumentation-fastapi==0.47b0
+opentelemetry-proto==1.26.0
+opentelemetry-sdk==1.26.0
+opentelemetry-semantic-conventions==0.47b0
+opentelemetry-util-http==0.47b0
 pandas==2.2.2
-Pygments==2.18.0
-PyJWT==2.9.0
+pillow==10.4.0
+posthog==3.5.0
+proto-plus==1.24.0
+protobuf==4.25.4
+pyarrow==17.0.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
 pydantic==2.8.2
 pydantic_core==2.20.1
 pydub==0.25.1
-python-dotenv
+Pygments==2.18.0
+pyparsing==3.1.2
+pypdf==4.3.0
+pyproject_hooks==1.1.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.9
+pyttsx3==2.90
 pytz==2024.1
+PyYAML==6.0.1
+referencing==0.35.1
+regex==2024.7.24
 requests==2.32.3
-setuptools==68.0.0
+requests-oauthlib==2.0.0
+rsa==4.7.2
+s3transfer==0.10.2
+setuptools==72.0.0
 six==1.16.0
-SQLAlchemy==2.0.20
-starlette==0.34.0
-tqdm==4.65.0
-urllib3==2.1.0
-uvicorn==0.23.2
-watchdog==3.0.0
+smmap==5.0.1
+SQLAlchemy==2.0.31
+sqlparse==0.5.1
+starlette==0.37.2
+streamlit==1.36.0
+streamlit-chat==0.1.1
+tenacity==8.5.0
+tiktoken==0.7.0
+tokenizers==0.19.1
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4.1
+tqdm==4.66.4
+typer==0.12.3
+types-requests==2.32.0.20240712
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+urllib3==2.2.2
+uvicorn==0.30.3
+websocket-client==1.8.0
+websockets==12.0
 whitenoise==6.7.0
-logging
+wrapt==1.16.0
+yarl==1.9.4
+zipp==3.19.2
